gerador_roteiros/tests/testfiles/0.9.0/rngvalidation/invalid/mapa_sem_cenarios.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346671442919" ID="ID_19969747" MODIFIED="1346671447474" TEXT="MM"/>
</map>
